--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -2,7 +2,7 @@ container: {type: DataRowPanel}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 20, font: '', spacing_above: large, icon_align: left, spacing_below: none,
+    text: '', font_size: 20, font: '', spacing_above: small, icon_align: left, spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: lb_1
   layout_properties: {column: LAVQQZ}
@@ -10,25 +10,23 @@ components:
   - {property: text, code: 'self.item["date"]'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '222', font_size: 48, font: '', spacing_above: small, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
+    text: '222', font_size: 30, font: '', spacing_above: none, icon_align: left, spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: lb_2
   layout_properties: {column: APQHOG}
   data_bindings:
   - {property: text, code: 'self.item[''sys'']'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '123', font_size: 48, font: '', spacing_above: small, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
+    text: '123', font_size: 30, font: '', spacing_above: none, icon_align: left, spacing_below: none,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: lb_3
   layout_properties: {column: GCJKIU}
   data_bindings:
   - {property: text, code: 'self.item[''dia'']'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 48, font: '', spacing_above: small, icon_align: left, spacing_below: none,
+    text: '', font_size: 30, font: '', spacing_above: none, icon_align: left, spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: lb_4
   layout_properties: {column: VZPVKB}
@@ -36,7 +34,7 @@ components:
   - {property: text, code: 'self.item[''pul'']'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 48, font: '', spacing_above: small, icon_align: left, spacing_below: none,
+    text: '', font_size: 30, font: '', spacing_above: none, icon_align: left, spacing_below: none,
     italic: false, background: '', bold: true, underline: false, icon: ''}
   name: lb_5
   layout_properties: {column: XTQSTS}
@@ -44,7 +42,7 @@ components:
   - {property: text, code: 'self.item[''mean'']'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 48, font: '', spacing_above: small, icon_align: left, spacing_below: none,
+    text: '', font_size: 30, font: '', spacing_above: none, icon_align: left, spacing_below: none,
     italic: false, background: '', bold: true, underline: false, icon: ''}
   name: lb_6
   layout_properties: {column: MDFTDB}
