--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -52,6 +52,8 @@ roles:
 - name: 0margine
   components: [Label]
   display_in_toolbox: false
+- name: 0height
+  components: [RowPanel]
 color_scheme:
   preset_groups:
   - name: Colour Scheme
