--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -198,7 +198,7 @@ components:
     layout_properties: {grid_position: 'OGCEYX,IBUKDW YMAIEF,YPNIRU'}
     components:
     - type: RepeatingPanel
-      properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+      properties: {role: 0height, tooltip: '', border: '', foreground: '', items: null,
         visible: true, spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1,
         background: ''}
       name: repeating_panel_1
