--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -13,41 +13,46 @@ components:
   data_bindings:
   - {property: text, code: 'self.item["date"]'}
 - type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '222', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: '222', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   name: lb_2
   layout_properties: {column: APQHOG}
   data_bindings:
   - {property: text, code: 'self.item[''sys'']'}
 - type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '123', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: '123', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   name: lb_3
   layout_properties: {column: GCJKIU}
   data_bindings:
   - {property: text, code: 'self.item[''dia'']'}
 - type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   name: lb_4
   layout_properties: {column: VZPVKB}
   data_bindings:
   - {property: text, code: 'self.item[''pul'']'}
 - type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: true, underline: false, icon: ''}
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: true, underline: false,
+    icon: ''}
   name: lb_5
   layout_properties: {column: XTQSTS}
   data_bindings:
   - {property: text, code: 'self.item[''mean'']'}
 - type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '  ', font_size: 20, font: '', spacing_above: none, icon_align: left, spacing_below: none,
-    italic: false, background: '', bold: true, underline: false, icon: ''}
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: '  ', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    spacing_below: none, italic: false, background: '', bold: true, underline: false,
+    icon: ''}
   name: lb_6
   layout_properties: {column: MDFTDB}
   data_bindings:
