Created Analysis; Edited Import

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   forms:
+    Analysis: '1680084447214561735756029.2018'
     Filter: '1675354309179242631683315.11676'
     Form1: LD6UCOTJ4RVEUAZ2KRK2JGBCEOADZKDL
     Form1.RowTemplate1: '1673624732843791916531249.1451'
