--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -4,9 +4,26 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {}
+  properties: {col_widths: '{}'}
   name: content_panel
   layout_properties: {slot: default}
+  components:
+  - type: ColumnPanel
+    properties: {}
+    name: column_panel_2
+    layout_properties: {grid_position: 'DOXDCO,TVSOTF'}
+  - type: ColumnPanel
+    properties: {}
+    name: column_panel_3
+    layout_properties: {grid_position: 'DOXDCO,SUCTIE'}
+  - type: FlowPanel
+    properties: {}
+    name: flow_panel_1
+    layout_properties: {grid_position: 'SKLLSZ,IBYFMW'}
+  - type: Plot
+    properties: {}
+    name: plot_1
+    layout_properties: {grid_position: 'RLETHD,WYYSNQ'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
