--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -13,7 +13,7 @@ components:
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"UCFLLP":10,"GIBSXC":10,"IGQZJU":10,"QJVERU":10,"EBIYQZ":10,"FDPAON":10}',
       spacing_below: small, background: ''}
     name: column_panel_2
@@ -214,11 +214,11 @@ components:
           Container'}
       data_bindings: []
   - type: ColumnPanel
-    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}',
       spacing_below: small, background: ''}
     name: column_panel_3
-    layout_properties: {grid_position: 'OGCEYX,IBUKDW BPAXWO,ISAWTP', full_width_row: true}
+    layout_properties: {grid_position: 'OGCEYX,IBUKDW', full_width_row: true}
     components:
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -227,38 +227,38 @@ components:
         underline: true, icon: ''}
       name: label_2
       layout_properties: {grid_position: 'YDQDXP,ATXMIL'}
-  - type: DataGrid
-    properties:
-      role: tonal-data-grid
-      columns:
-      - {id: LAVQQZ, title: date, data_key: '', $$hashKey: 'object:165558', width: '100',
-        expand: true}
-      - {id: APQHOG, title: SYS, data_key: '', $$hashKey: 'object:165559', width: '',
-        expand: false}
-      - {id: GCJKIU, title: DIA, data_key: '', $$hashKey: 'object:165560'}
-      - {id: VZPVKB, title: PUL, data_key: '', $$hashKey: 'object:165601'}
-      - {id: XTQSTS, title: MEAN, data_key: mean, $$hashKey: 'object:165603'}
-      - {id: MDFTDB, title: afib, data_key: '', $$hashKey: 'object:165605'}
-      auto_header: true
-      tooltip: ''
-      border: ''
-      foreground: ''
-      rows_per_page: 20
-      visible: true
-      wrap_on: never
-      show_page_controls: true
-      spacing_above: small
-      spacing_below: small
-      background: ''
-    name: data_grid_1
-    layout_properties: {grid_position: 'OGCEYX,IBUKDW YMAIEF,YPNIRU'}
-    components:
-    - type: RepeatingPanel
-      properties: {role: 0height, tooltip: '', border: '', foreground: '', items: null,
-        visible: true, spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1,
-        background: ''}
-      name: repeating_panel_1
-      layout_properties: {}
+    - type: DataGrid
+      properties:
+        role: tonal-data-grid
+        columns:
+        - {id: LAVQQZ, title: date, data_key: '', $$hashKey: 'object:165558', width: '100',
+          expand: true}
+        - {id: APQHOG, title: SYS, data_key: '', $$hashKey: 'object:165559', width: '',
+          expand: false}
+        - {id: GCJKIU, title: DIA, data_key: '', $$hashKey: 'object:165560'}
+        - {id: VZPVKB, title: PUL, data_key: '', $$hashKey: 'object:165601'}
+        - {id: XTQSTS, title: MEAN, data_key: mean, $$hashKey: 'object:165603'}
+        - {id: MDFTDB, title: afib, data_key: '', $$hashKey: 'object:165605'}
+        auto_header: true
+        tooltip: ''
+        border: ''
+        foreground: ''
+        rows_per_page: 20
+        visible: true
+        wrap_on: never
+        show_page_controls: true
+        spacing_above: small
+        spacing_below: small
+        background: ''
+      name: data_grid_1
+      layout_properties: {grid_position: 'MRGXTV,ELQTCF'}
+      components:
+      - type: RepeatingPanel
+        properties: {role: 0height, tooltip: '', border: '', foreground: '', items: null,
+          visible: true, spacing_above: none, spacing_below: none, item_template: Form1.RowTemplate1,
+          background: ''}
+        name: repeating_panel_1
+        layout_properties: {}
 - type: FlowPanel
   properties: {}
   name: navbar_links
