--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -151,7 +151,7 @@ components:
       name: lb_26
       layout_properties: {grid_position: 'SLLSPA,TIWABF', full_width_row: false}
     - type: FlowPanel
-      properties: {role: null, spacing: large, align: left, tooltip: '', border: top dotted,
+      properties: {role: null, spacing: large, align: left, tooltip: '', border: solid  lightblue,
         foreground: '', visible: true, spacing_above: small, spacing_below: small,
         background: ''}
       name: flow_panel_2
