--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -151,7 +151,7 @@ components:
       name: lb_26
       layout_properties: {grid_position: 'SLLSPA,TIWABF', full_width_row: false}
     - type: FlowPanel
-      properties: {role: null, spacing: large, align: left, tooltip: '', border: solid  lightblue,
+      properties: {role: null, spacing: medium, align: left, tooltip: '', border: '',
         foreground: '', visible: true, spacing_above: small, spacing_below: small,
         background: ''}
       name: flow_panel_2
@@ -173,7 +173,7 @@ components:
         layout_properties: {}
       - type: Label
         properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: 77%, font_size: 43, font: '', spacing_above: small,
+          visible: true, text: 77%, font_size: 42, font: '', spacing_above: small,
           icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
           underline: false, icon: ''}
         name: lb_32
@@ -187,7 +187,7 @@ components:
         layout_properties: {}
       - type: Label
         properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: 12%, font_size: 43, font: '', spacing_above: small,
+          visible: true, text: 12%, font_size: 42, font: '', spacing_above: small,
           icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
           underline: false, icon: ''}
         name: lb_34
@@ -201,7 +201,7 @@ components:
         layout_properties: {}
       - type: Label
         properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: 11%, font_size: 43, font: '', spacing_above: small,
+          visible: true, text: 11%, font_size: 42, font: '', spacing_above: small,
           icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
           underline: false, icon: ''}
         name: lb_36
