--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -48,13 +48,22 @@ components:
   layout_properties: {column: XTQSTS}
   data_bindings:
   - {property: text, code: 'self.item[''mean'']'}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '  ', font_size: 20, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: true, underline: false,
-    icon: ''}
-  name: lb_6
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: none,
+    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_1
   layout_properties: {column: MDFTDB}
-  data_bindings:
-  - {property: text, code: 'self.item[''afib'']'}
+  event_bindings: {click: link_1_click}
+  components:
+  - type: Label
+    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '  ', font_size: 20, font: '', spacing_above: none, icon_align: left,
+      spacing_below: none, italic: false, background: '', bold: true, underline: false,
+      icon: ''}
+    name: lb_6
+    layout_properties: {column: MDFTDB, grid_position: 'FFNDIU,MDANAH'}
+    data_bindings:
+    - {property: text, code: 'self.item[''afib'']'}
 is_package: true
