--- a/client_code/Form1/RowTemplate1/form_template.yaml
+++ b/client_code/Form1/RowTemplate1/form_template.yaml
@@ -14,7 +14,7 @@ components:
   - {property: text, code: 'self.item["date"]'}
 - type: Label
   properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '222', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: lb_2
@@ -23,7 +23,7 @@ components:
   - {property: text, code: 'self.item[''sys'']'}
 - type: Label
   properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '123', font_size: 20, font: '', spacing_above: none, icon_align: left,
+    visible: true, text: '', font_size: 20, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: lb_3
