--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -9,7 +9,7 @@ components:
   properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: none, spacing_below: none, background: ''}
   name: flow_panel_2
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ HGFGXB,NWXPOO'}
+  layout_properties: {grid_position: 'HGFGXB,NWXPOO'}
   components:
   - type: RadioButton
     properties: {role: null, selected: false, align: left, tooltip: '', border: '',
@@ -47,7 +47,7 @@ components:
   properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: none, spacing_below: none, background: ''}
   name: flow_panel_1
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ OSHLVW,WIHBNY'}
+  layout_properties: {grid_position: 'OSHLVW,WIHBNY'}
   components:
   - type: RadioButton
     properties: {role: null, selected: false, align: left, tooltip: '', border: '',
@@ -57,17 +57,25 @@ components:
     name: r
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
     event_bindings: {clicked: r_clicked}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, checked: false, underline: false}
+    name: all
+    layout_properties: {grid_position: 'SKHQLQ,YLNLBZ'}
+    event_bindings: {change: zone_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: Time FROM - TO, font_size: null, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: t_from_to
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ NDJMBI,JCQVTI'}
+  layout_properties: {grid_position: 'NDJMBI,JCQVTI'}
 - type: LinearPanel
   properties: {}
   name: linear_panel_1
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ DEDTVD,TMPOUV'}
+  layout_properties: {grid_position: 'DEDTVD,TMPOUV'}
   components:
   - type: DatePicker
     properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -85,7 +93,7 @@ components:
     font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
     date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
   name: t_to
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ AXUESG,RIPMES'}
+  layout_properties: {grid_position: 'AXUESG,RIPMES'}
   data_bindings:
   - {property: date, code: 'self.item[''to_date'']', writeback: true}
   event_bindings: {change: t_to_change}
@@ -95,7 +103,7 @@ components:
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: d_zone
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ LGBALO,RCTBGY'}
+  layout_properties: {grid_position: 'LGBALO,RCTBGY'}
 - type: DropDown
   properties:
     role: null
@@ -117,7 +125,7 @@ components:
     underline: false
     include_placeholder: false
   name: drop_down_1
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ GVBMFN,WWZEEE'}
+  layout_properties: {grid_position: 'GVBMFN,WWZEEE'}
   data_bindings: []
   event_bindings: {change: drop_down_1_change}
 - type: DropDown
@@ -141,21 +149,13 @@ components:
     underline: false
     include_placeholder: false
   name: drop_down_2
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ REPJDC,JFXTWE'}
+  layout_properties: {grid_position: 'REPJDC,JFXTWE'}
   event_bindings: {change: drop_down_2_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: '', font_size: null, font: '', spacing_above: none, icon_align: left, spacing_below: none,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: msg
-  layout_properties: {grid_position: 'SKHQLQ,YLEIDZ YIHNMT,WHMSIC'}
-- type: CheckBox
-  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
-    allow_indeterminate: false, visible: true, text: ALL rows, font_size: null, font: '',
-    spacing_above: small, spacing_below: small, italic: false, background: '', bold: false,
-    checked: false, underline: false}
-  name: all
-  layout_properties: {grid_position: 'SKHQLQ,YLNLBZ'}
-  event_bindings: {change: all_change}
+  layout_properties: {grid_position: 'YIHNMT,WHMSIC'}
 is_package: true
 custom_component: true
